--- a/Lab1/main.ipynb
+++ b/Lab1/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "915ce803",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "2709d14d",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "20acb406",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "816c69f4",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
     "    text_input = clip.tokenize([query_text]).to(device)\n",
     "    \n",
     "    with torch.no_grad():\n",
-    "        # Generate text features [cite: 55]\n",
+    "        # Generate text features\n",
     "        query_features = model.encode_text(text_input)\n",
     "        \n",
     "        # Normalize the query features for accurate cosine similarity\n",
@@ -109,7 +109,6 @@
     "            video_vector /= video_vector.norm(dim=-1, keepdim=True)\n",
     "            \n",
     "            # 2. Calculate Cosine Similarity \n",
-    "            # Similarity = (Query Vector @ Video Vector.T)\n",
     "            similarity = (query_features @ video_vector.T).item()\n",
     "            \n",
     "            results.append((file_name, similarity))\n",
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "192f63e2",
    "metadata": {},
    "outputs": [
@@ -136,7 +135,7 @@
        " ('Gaming_1080P-44c4_orig.mp4', 0.2587890625)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "5a4f9cd1",
    "metadata": {},
    "outputs": [],
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "bc085ed3",
    "metadata": {},
    "outputs": [
@@ -175,35 +174,73 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Cluster 0 (13 videos):\n",
+      "Cluster 0 (46 videos):\n",
       " - Sports_1080P-0640_orig.mp4\n",
+      " - Sports_1080P-08e1_orig.mp4\n",
+      " - Sports_1080P-0d0c_orig.mp4\n",
+      " - Sports_1080P-15d1_orig.mp4\n",
+      " - Sports_1080P-19d8_orig.mp4\n",
+      " - Sports_1080P-1ae3_orig.mp4\n",
+      " - Sports_1080P-1bf7_orig.mp4\n",
+      " - Sports_1080P-1d78_orig.mp4\n",
       " - Sports_1080P-241e_orig.mp4\n",
+      " - Sports_1080P-2524_orig.mp4\n",
+      " - Sports_1080P-28a6_orig.mp4\n",
+      " - Sports_1080P-2a21_orig.mp4\n",
+      " - Sports_1080P-3a3b_orig.mp4\n",
+      " - Sports_1080P-3db7_orig.mp4\n",
       " - Sports_1080P-3eb0_orig.mp4\n",
+      " - Sports_1080P-43e2_orig.mp4\n",
       " - Sports_1080P-47e9_orig.mp4\n",
+      " - Sports_1080P-49c5_orig.mp4\n",
+      " - Sports_1080P-4e05_orig.mp4\n",
+      " - Sports_1080P-53a0_orig.mp4\n",
+      " - Sports_1080P-5d25_orig.mp4\n",
+      " - Sports_1080P-6571_orig.mp4\n",
+      " - Sports_1080P-6710_orig.mp4\n",
+      " - Sports_1080P-679d_orig.mp4\n",
       " - Sports_1080P-7203_orig.mp4\n",
       " - Sports_1080P-7584_orig.mp4\n",
+      " - Sports_1080P-76a2_orig.mp4\n",
+      " - Sports_1080P-7dba_orig.mp4\n",
       " - Sports_720P-00a1_orig.mp4\n",
       " - Sports_720P-0104_orig.mp4\n",
       " - Sports_720P-058f_orig.mp4\n",
       " - Sports_720P-07d0_orig.mp4\n",
       " - Sports_720P-0b9e_orig.mp4\n",
+      " - Sports_720P-17fb_orig.mp4\n",
+      " - Sports_720P-2191_orig.mp4\n",
+      " - Sports_720P-2234_orig.mp4\n",
+      " - Sports_720P-2632_orig.mp4\n",
+      " - Sports_720P-2c06_orig.mp4\n",
+      " - Sports_720P-2c80_orig.mp4\n",
+      " - Sports_720P-3072_orig.mp4\n",
+      " - Sports_720P-3338_orig.mp4\n",
+      " - Sports_720P-33c6_orig.mp4\n",
+      " - Sports_720P-3eb4_orig.mp4\n",
       " - Sports_720P-3ffe_orig.mp4\n",
       " - Sports_720P-4b69_orig.mp4\n",
+      " - Sports_720P-4c6f_orig.mp4\n",
       "\n",
-      "Cluster 1 (42 videos):\n",
+      "Cluster 1 (54 videos):\n",
+      " - Gaming_1080P-0ce6_orig.mp4\n",
       " - Gaming_1080P-0ef8_orig.mp4\n",
       " - Gaming_1080P-12d4_orig.mp4\n",
       " - Gaming_1080P-13e3_orig.mp4\n",
       " - Gaming_1080P-1704_orig.mp4\n",
       " - Gaming_1080P-173a_orig.mp4\n",
+      " - Gaming_1080P-190d_orig.mp4\n",
       " - Gaming_1080P-2221_orig.mp4\n",
       " - Gaming_1080P-223e_orig.mp4\n",
+      " - Gaming_1080P-26dc_orig.mp4\n",
       " - Gaming_1080P-277c_orig.mp4\n",
       " - Gaming_1080P-2e97_orig.mp4\n",
+      " - Gaming_1080P-35fa_orig.mp4\n",
       " - Gaming_1080P-3a9d_orig.mp4\n",
       " - Gaming_1080P-3d58_orig.mp4\n",
       " - Gaming_1080P-44c4_orig.mp4\n",
       " - Gaming_1080P-45af_orig.mp4\n",
+      " - Gaming_1080P-45fc_orig.mp4\n",
       " - Gaming_1080P-4865_orig.mp4\n",
       " - Gaming_1080P-51fc_orig.mp4\n",
       " - Gaming_1080P-564e_orig.mp4\n",
@@ -213,18 +250,25 @@
       " - Gaming_1080P-66d2_orig.mp4\n",
       " - Gaming_1080P-698a_orig.mp4\n",
       " - Gaming_1080P-6d53_orig.mp4\n",
+      " - Gaming_1080P-6db2_orig.mp4\n",
       " - Gaming_1080P-6dc6_orig.mp4\n",
+      " - Gaming_1080P-6e45_orig.mp4\n",
       " - Gaming_1080P-71a5_orig.mp4\n",
       " - Gaming_1080P-72c8_orig.mp4\n",
+      " - Gaming_1080P-777b_orig.mp4\n",
       " - Gaming_1080P-7a1e_orig.mp4\n",
       " - Gaming_720P-0fba_orig.mp4\n",
+      " - Gaming_720P-0fdb_orig.mp4\n",
       " - Gaming_720P-103a_orig.mp4\n",
       " - Gaming_720P-221d_orig.mp4\n",
       " - Gaming_720P-25aa_orig.mp4\n",
       " - Gaming_720P-2dbe_orig.mp4\n",
       " - Gaming_720P-312f_orig.mp4\n",
+      " - Gaming_720P-324d_orig.mp4\n",
+      " - Gaming_720P-3524_orig.mp4\n",
       " - Gaming_720P-40b2_orig.mp4\n",
       " - Gaming_720P-469a_orig.mp4\n",
+      " - Gaming_720P-493e_orig.mp4\n",
       " - Gaming_720P-4cda_orig.mp4\n",
       " - Gaming_720P-5973_orig.mp4\n",
       " - Gaming_720P-5ba2_orig.mp4\n",
@@ -232,56 +276,7 @@
       " - Gaming_720P-64b0_orig.mp4\n",
       " - Gaming_720P-6625_orig.mp4\n",
       " - Gaming_720P-6658_orig.mp4\n",
-      " - Gaming_720P-6a45_orig.mp4\n",
-      "\n",
-      "Cluster 2 (17 videos):\n",
-      " - Gaming_1080P-0ce6_orig.mp4\n",
-      " - Gaming_1080P-190d_orig.mp4\n",
-      " - Gaming_1080P-26dc_orig.mp4\n",
-      " - Gaming_1080P-35fa_orig.mp4\n",
-      " - Gaming_1080P-45fc_orig.mp4\n",
-      " - Gaming_1080P-6db2_orig.mp4\n",
-      " - Gaming_1080P-6e45_orig.mp4\n",
-      " - Gaming_1080P-777b_orig.mp4\n",
-      " - Gaming_720P-0fdb_orig.mp4\n",
-      " - Gaming_720P-324d_orig.mp4\n",
-      " - Gaming_720P-3524_orig.mp4\n",
-      " - Gaming_720P-493e_orig.mp4\n",
-      " - Sports_1080P-08e1_orig.mp4\n",
-      " - Sports_1080P-49c5_orig.mp4\n",
-      " - Sports_720P-17fb_orig.mp4\n",
-      " - Sports_720P-2632_orig.mp4\n",
-      " - Sports_720P-4c6f_orig.mp4\n",
-      "\n",
-      "Cluster 3 (28 videos):\n",
-      " - Sports_1080P-0d0c_orig.mp4\n",
-      " - Sports_1080P-15d1_orig.mp4\n",
-      " - Sports_1080P-19d8_orig.mp4\n",
-      " - Sports_1080P-1ae3_orig.mp4\n",
-      " - Sports_1080P-1bf7_orig.mp4\n",
-      " - Sports_1080P-1d78_orig.mp4\n",
-      " - Sports_1080P-2524_orig.mp4\n",
-      " - Sports_1080P-28a6_orig.mp4\n",
-      " - Sports_1080P-2a21_orig.mp4\n",
-      " - Sports_1080P-3a3b_orig.mp4\n",
-      " - Sports_1080P-3db7_orig.mp4\n",
-      " - Sports_1080P-43e2_orig.mp4\n",
-      " - Sports_1080P-4e05_orig.mp4\n",
-      " - Sports_1080P-53a0_orig.mp4\n",
-      " - Sports_1080P-5d25_orig.mp4\n",
-      " - Sports_1080P-6571_orig.mp4\n",
-      " - Sports_1080P-6710_orig.mp4\n",
-      " - Sports_1080P-679d_orig.mp4\n",
-      " - Sports_1080P-76a2_orig.mp4\n",
-      " - Sports_1080P-7dba_orig.mp4\n",
-      " - Sports_720P-2191_orig.mp4\n",
-      " - Sports_720P-2234_orig.mp4\n",
-      " - Sports_720P-2c06_orig.mp4\n",
-      " - Sports_720P-2c80_orig.mp4\n",
-      " - Sports_720P-3072_orig.mp4\n",
-      " - Sports_720P-3338_orig.mp4\n",
-      " - Sports_720P-33c6_orig.mp4\n",
-      " - Sports_720P-3eb4_orig.mp4\n"
+      " - Gaming_720P-6a45_orig.mp4\n"
      ]
     },
     {
@@ -299,7 +294,7 @@
     "features_matrix = torch.stack([d[f].squeeze() for f in filenames]).cpu().numpy()\n",
     "\n",
     "# 2. Define and Fit\n",
-    "num_clusters = 4 \n",
+    "num_clusters = 2\n",
     "kmeans = KMeans(n_clusters=num_clusters, random_state=42, n_init=10)\n",
     "cluster_labels = kmeans.fit_predict(features_matrix)\n",
     "\n",
@@ -311,6 +306,159 @@
     "# Print results\n",
     "for cluster_id, files in clusters.items():\n",
     "    print(f\"\\nCluster {cluster_id} ({len(files)} videos):\")\n",
+    "    for f in files:\n",
+    "        print(f\" - {f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "67c5fd10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import DBSCAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "dbf20af0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Noise/Outliers (36 videos):\n",
+      " - Gaming_1080P-190d_orig.mp4\n",
+      " - Gaming_1080P-2221_orig.mp4\n",
+      " - Gaming_1080P-223e_orig.mp4\n",
+      " - Gaming_1080P-57ca_orig.mp4\n",
+      " - Gaming_1080P-6e45_orig.mp4\n",
+      " - Gaming_720P-3524_orig.mp4\n",
+      " - Gaming_720P-6a45_orig.mp4\n",
+      " - Sports_1080P-0640_orig.mp4\n",
+      " - Sports_1080P-08e1_orig.mp4\n",
+      " - Sports_1080P-0d0c_orig.mp4\n",
+      " - Sports_1080P-19d8_orig.mp4\n",
+      " - Sports_1080P-241e_orig.mp4\n",
+      " - Sports_1080P-28a6_orig.mp4\n",
+      " - Sports_1080P-3a3b_orig.mp4\n",
+      " - Sports_1080P-3eb0_orig.mp4\n",
+      " - Sports_1080P-47e9_orig.mp4\n",
+      " - Sports_1080P-49c5_orig.mp4\n",
+      " - Sports_1080P-6571_orig.mp4\n",
+      " - Sports_1080P-679d_orig.mp4\n",
+      " - Sports_1080P-7203_orig.mp4\n",
+      " - Sports_1080P-7584_orig.mp4\n",
+      " - Sports_720P-00a1_orig.mp4\n",
+      " - Sports_720P-0104_orig.mp4\n",
+      " - Sports_720P-058f_orig.mp4\n",
+      " - Sports_720P-07d0_orig.mp4\n",
+      " - Sports_720P-0b9e_orig.mp4\n",
+      " - Sports_720P-17fb_orig.mp4\n",
+      " - Sports_720P-2234_orig.mp4\n",
+      " - Sports_720P-2632_orig.mp4\n",
+      " - Sports_720P-3072_orig.mp4\n",
+      " - Sports_720P-3338_orig.mp4\n",
+      " - Sports_720P-33c6_orig.mp4\n",
+      " - Sports_720P-3eb4_orig.mp4\n",
+      " - Sports_720P-3ffe_orig.mp4\n",
+      " - Sports_720P-4b69_orig.mp4\n",
+      " - Sports_720P-4c6f_orig.mp4\n",
+      "\n",
+      "Cluster 0 (43 videos):\n",
+      " - Gaming_1080P-0ce6_orig.mp4\n",
+      " - Gaming_1080P-12d4_orig.mp4\n",
+      " - Gaming_1080P-13e3_orig.mp4\n",
+      " - Gaming_1080P-1704_orig.mp4\n",
+      " - Gaming_1080P-173a_orig.mp4\n",
+      " - Gaming_1080P-26dc_orig.mp4\n",
+      " - Gaming_1080P-277c_orig.mp4\n",
+      " - Gaming_1080P-2e97_orig.mp4\n",
+      " - Gaming_1080P-35fa_orig.mp4\n",
+      " - Gaming_1080P-3a9d_orig.mp4\n",
+      " - Gaming_1080P-3d58_orig.mp4\n",
+      " - Gaming_1080P-44c4_orig.mp4\n",
+      " - Gaming_1080P-45af_orig.mp4\n",
+      " - Gaming_1080P-45fc_orig.mp4\n",
+      " - Gaming_1080P-4865_orig.mp4\n",
+      " - Gaming_1080P-51fc_orig.mp4\n",
+      " - Gaming_1080P-564e_orig.mp4\n",
+      " - Gaming_1080P-58ba_orig.mp4\n",
+      " - Gaming_1080P-6530_orig.mp4\n",
+      " - Gaming_1080P-66d2_orig.mp4\n",
+      " - Gaming_1080P-698a_orig.mp4\n",
+      " - Gaming_1080P-6d53_orig.mp4\n",
+      " - Gaming_1080P-6db2_orig.mp4\n",
+      " - Gaming_1080P-6dc6_orig.mp4\n",
+      " - Gaming_1080P-71a5_orig.mp4\n",
+      " - Gaming_1080P-72c8_orig.mp4\n",
+      " - Gaming_1080P-777b_orig.mp4\n",
+      " - Gaming_720P-0fba_orig.mp4\n",
+      " - Gaming_720P-0fdb_orig.mp4\n",
+      " - Gaming_720P-103a_orig.mp4\n",
+      " - Gaming_720P-221d_orig.mp4\n",
+      " - Gaming_720P-25aa_orig.mp4\n",
+      " - Gaming_720P-312f_orig.mp4\n",
+      " - Gaming_720P-324d_orig.mp4\n",
+      " - Gaming_720P-40b2_orig.mp4\n",
+      " - Gaming_720P-469a_orig.mp4\n",
+      " - Gaming_720P-493e_orig.mp4\n",
+      " - Gaming_720P-4cda_orig.mp4\n",
+      " - Gaming_720P-5973_orig.mp4\n",
+      " - Gaming_720P-5ba2_orig.mp4\n",
+      " - Gaming_720P-6403_orig.mp4\n",
+      " - Gaming_720P-64b0_orig.mp4\n",
+      " - Gaming_720P-6658_orig.mp4\n",
+      "\n",
+      "Cluster 1 (4 videos):\n",
+      " - Gaming_1080P-0ef8_orig.mp4\n",
+      " - Gaming_1080P-7a1e_orig.mp4\n",
+      " - Gaming_720P-2dbe_orig.mp4\n",
+      " - Gaming_720P-6625_orig.mp4\n",
+      "\n",
+      "Cluster 2 (17 videos):\n",
+      " - Sports_1080P-15d1_orig.mp4\n",
+      " - Sports_1080P-1ae3_orig.mp4\n",
+      " - Sports_1080P-1bf7_orig.mp4\n",
+      " - Sports_1080P-1d78_orig.mp4\n",
+      " - Sports_1080P-2524_orig.mp4\n",
+      " - Sports_1080P-2a21_orig.mp4\n",
+      " - Sports_1080P-3db7_orig.mp4\n",
+      " - Sports_1080P-43e2_orig.mp4\n",
+      " - Sports_1080P-4e05_orig.mp4\n",
+      " - Sports_1080P-53a0_orig.mp4\n",
+      " - Sports_1080P-5d25_orig.mp4\n",
+      " - Sports_1080P-6710_orig.mp4\n",
+      " - Sports_1080P-76a2_orig.mp4\n",
+      " - Sports_1080P-7dba_orig.mp4\n",
+      " - Sports_720P-2191_orig.mp4\n",
+      " - Sports_720P-2c06_orig.mp4\n",
+      " - Sports_720P-2c80_orig.mp4\n"
+     ]
+    }
+   ],
+   "source": [
+    "dbscan = DBSCAN(eps=0.2, min_samples=3, metric='cosine')\n",
+    "\n",
+    "# 3. Fit the model\n",
+    "cluster_labels = dbscan.fit_predict(features_matrix)\n",
+    "\n",
+    "# 4. Organize results\n",
+    "# Label -1 represents noise (outliers)\n",
+    "clusters = {}\n",
+    "for filename, label in zip(filenames, cluster_labels):\n",
+    "    if label not in clusters:\n",
+    "        clusters[label] = []\n",
+    "    clusters[label].append(filename)\n",
+    "\n",
+    "# 5. Print the results\n",
+    "for cluster_id, files in sorted(clusters.items()):\n",
+    "    label_name = f\"Cluster {cluster_id}\" if cluster_id != -1 else \"Noise/Outliers\"\n",
+    "    print(f\"\\n{label_name} ({len(files)} videos):\")\n",
     "    for f in files:\n",
     "        print(f\" - {f}\")"
    ]
