Final added PCA

--- a/Lab1/звіт/main.tex
+++ b/Lab1/звіт/main.tex
@@ -1,11 +1,14 @@
 \documentclass[12pt,a4paper]{article}
-\usepackage[utf8]{inputenc}
 \usepackage[ukrainian]{babel}
+\usepackage{fontspec} % Тепер цей пакет запрацює!
+
+% Вибір шрифту, який підтримує кирилицю
+\setmainfont{FreeSerif} % У Overleaf цей шрифт встановлено за замовчуванням і він має кирилицю
 \usepackage{amsmath}
-\usepackage{graphicx}
 \usepackage{listings}
 \usepackage{xcolor}
 \usepackage{geometry}
+\usepackage{graphicx}
 
 \geometry{margin=2cm}
 
@@ -73,6 +76,18 @@
     \item Було виявлено значну кількість ``шуму'' (outliers), що відповідає відео з унікальними візуальними характеристиками.
     \item Алгоритм не лише розділив основні категорії, а й самостійно виділив специфічну підгрупу — \textbf{відео з Minecraft}, завдяки характерному кубічному стилю графіки, який утворює щільний кластер у векторному просторі CLIP.
 \end{itemize}
+
+\subsection{Візуалізація простору ознак (PCA)}
+Для аналізу розподілу векторних представлень відео було застосовано метод головних компонент (PCA), що дозволило знизити розмірність ембеддінгів з 512 до 2 компонент для побудови двовимірного графіка.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{pca.png}
+    \caption{Візуалізація кластеризації відео за допомогою методу PCA. Кольорами позначено результати роботи алгоритмів K-Means та DBSCAN.}
+    \label{fig:pca_visualization}
+\end{figure}
+
+На графіку (рис. \ref{fig:pca_visualization}) чітко спостерігається сепарація даних. Спортивний та ігровий контент утворюють окремі області у просторі[cite: 87]. Зокрема, результати DBSCAN підтверджують наявність щільного ядра для специфічних ігор (наприклад, Minecraft) та розсіяних точок "шуму", які відповідають унікальним або менш типовим відеоматеріалам[cite: 88, 89].
 
 \section{Висновки}
 Розроблена система демонструє високу ефективність у задачах Zero-shot пошуку. Використання Mean Pooling для кадрів відео виявилося достатнім для точного тематичного пошуку та кластеризації. Модель CLIP успішно справляється з розпізнаванням складних візуальних патернів (наприклад, стилістика Assassin's Creed або Minecraft) без додаткового донавчання.
